--- a/content/community/contributing_site.adoc
+++ b/content/community/contributing_site.adoc
@@ -7,7 +7,7 @@ Alex Miller
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
-This web site is an open-source repository of content about the Clojure programming language and its greater ecosystem, hosted at http://clojure.org.
+This web site is an open-source repository of content about the Clojure programming language and its greater ecosystem, hosted at https://clojure.org.
 
 If you wish to point out an issue in the site or propose a new page, you can do so by filing a GitHub issue at https://github.com/clojure/clojure-site/issues.
 
