--- a/content/community/libraries.adoc
+++ b/content/community/libraries.adoc
@@ -25,7 +25,7 @@ Community volunteers maintain http://dev.clojure.org/display/doc/getting+started
 
 == Finding Libraries
 
-http://search.maven.org/[Maven Central] is a searchable repository of open source JVM libraries.
+https://search.maven.org/[Maven Central] is a searchable repository of open source JVM libraries.
 
 https://clojars.org/[Clojars] is a community repository for open source Clojure libraries.
 
