--- a/content/reference/compilation.adoc
+++ b/content/reference/compilation.adoc
@@ -30,7 +30,7 @@ The Clojure compilation model preserves as much as possible the dynamic nature o
 * The static initializer for a loader class produces the same effects as does loading its source file
 ** You generally shouldn't need to use these classes directly, as use, require and load will choose between them and more recent source
 * The loader class is generated for each file referenced when a namespace is compiled, when its loader .class file is older than its source.
-* A stand-alone http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/gen-class[gen-class] facility is provided to create named classes for direct use as Java classes, with facilities for:
+* A stand-alone https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/gen-class[gen-class] facility is provided to create named classes for direct use as Java classes, with facilities for:
 * Naming the generated class
 * Selecting the superclass
 * Specifying any implemented interfaces
@@ -42,15 +42,15 @@ The Clojure compilation model preserves as much as possible the dynamic nature o
 * Controlling the mapping to an implementing namespace
 * Exposing inherited protected members
 ** Generating more than one named class from a single file, with implementations in one or more namespaces
-* An optional http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/gen-class[:gen-class] directive can be used in the http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/ns[ns] declaration to generate a named class corresponding to a namespace. (:gen-class ...), when supplied, defaults to :name corresponding to the ns name, :main true, :impl-ns same as ns, and :init-impl-ns true. All options of gen-class are supported.
+* An optional https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/gen-class[:gen-class] directive can be used in the https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/ns[ns] declaration to generate a named class corresponding to a namespace. (:gen-class ...), when supplied, defaults to :name corresponding to the ns name, :main true, :impl-ns same as ns, and :init-impl-ns true. All options of gen-class are supported.
 * gen-class and the :gen-class directive are ignored when not compiling.
-* A stand-alone http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/gen-interface[gen-interface] facility is provided for generating named interface classes for direct use as Java interfaces, with facilities for:
+* A stand-alone https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/gen-interface[gen-interface] facility is provided for generating named interface classes for direct use as Java interfaces, with facilities for:
 * Naming the generated interface
 * Specifying any superintefaces
 ** Declaring the signatures of interface methods
 
 == Compiling
-To compile a lib, use the http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/compile[compile] function, and supply the namespace name as a symbol. For some namespace my.domain.lib, defined in my/domain/lib.clj, in the classpath, the following should occur:
+To compile a lib, use the https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/compile[compile] function, and supply the namespace name as a symbol. For some namespace my.domain.lib, defined in my/domain/lib.clj, in the classpath, the following should occur:
 
 * A loader classfile will produced in ``my/domain/lib__init.class``, under *compile-path*, which must be in the classpath
 * A set of classfiles will be produced, one per fn in the namespace, with names such as ``my/domain/lib$fnname__1234.class``
