--- a/content/reference/macros.adoc
+++ b/content/reference/macros.adoc
@@ -15,7 +15,7 @@ toc::[]
 
 Clojure has a programmatic macro system which allows the compiler to be extended by user code. Macros can be used to define syntactic constructs which would require primitives or built-in support in other languages. Many core constructs of Clojure are not, in fact, primitives, but are normal macros.
 
-Some macros produce simple combinations of primitive forms. For example, http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/when[`when`] combines <<special_forms#if#,`if`>> and <<special_forms#do#,`do`>>:
+Some macros produce simple combinations of primitive forms. For example, https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/when[`when`] combines <<special_forms#if#,`if`>> and <<special_forms#do#,`do`>>:
 
 [source,clojure-repl]
 ----
@@ -40,18 +40,18 @@ Two special variables are available inside defmacro for more advanced usages:
 * `&form` - the actual form (as data) that is being invoked
 * `&env` - a map of local bindings at the point of macro expansion. The env map is from symbols to objects holding compiler information about that binding.
 
-All of the following macros are documented on the http://clojure.github.io/clojure/[API] page. Many are also discussed on topic pages as noted:
+All of the following macros are documented on the https://clojure.github.io/clojure/[API] page. Many are also discussed on topic pages as noted:
 
 [%hardbreaks]
-Creating macros: http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defmacro[defmacro] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/definline[definline] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/macroexpand-1[macroexpand-1] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/macroexpand[macroexpand]
-Branching: http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/and[and] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/or[or] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/when[when] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/when-not[when-not] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/when-let[when-let] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/when-first[when-first] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/if-not[if-not] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/if-let[if-let] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/cond[cond] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/condp[condp]
-Looping (see also <<sequences#,Sequences>>): http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/for[for] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/doseq[doseq] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/dotimes[dotimes] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/while[while]
-Working with vars (see also <<vars#,Vars and Environment>>): http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/ns[ns] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/declare[declare] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defn[defn] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defmacro[defmacro] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/definline[definline] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defmethod[defmethod] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defmulti[defmulti] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defn-[defn-] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defonce[defonce] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defstruct[defstruct]
-Arranging code differently: http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/%2E%2E[..] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/doto[doto] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/-%3e[pass:[->]]
-Dynamic scopes (see also <<vars#,Vars and Environment>>): http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/binding[binding] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/locking[locking] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/time[time] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/with-in-str[with-in-str] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/with-local-vars[with-local-vars] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/with-open[with-open] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/with-out-str[with-out-str] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/with-precision[with-precision]
-Creating lazy things (see also <<sequences#,Sequences>>): http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/lazy-cat[lazy-cat] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/lazy-cons[lazy-cons] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/delay[delay]
-<<java_interop#,Java interop>> macros: http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/%2E%2E[..] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/amap[amap] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/areduce[areduce] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/gen-class[gen-class] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/gen-interface[gen-interface] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/proxy[proxy] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/proxy-super[proxy-super] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/memfn[memfn]
-Documenting code: http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/assert[assert] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/comment[comment] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/doc[doc]
-Transactions: http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/dosync[dosync] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/io![io!]
+Creating macros: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defmacro[defmacro] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/definline[definline] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/macroexpand-1[macroexpand-1] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/macroexpand[macroexpand]
+Branching: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/and[and] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/or[or] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/when[when] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/when-not[when-not] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/when-let[when-let] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/when-first[when-first] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/if-not[if-not] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/if-let[if-let] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/cond[cond] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/condp[condp]
+Looping (see also <<sequences#,Sequences>>): https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/for[for] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/doseq[doseq] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/dotimes[dotimes] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/while[while]
+Working with vars (see also <<vars#,Vars and Environment>>): https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/ns[ns] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/declare[declare] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defn[defn] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defmacro[defmacro] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/definline[definline] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defmethod[defmethod] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defmulti[defmulti] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defn-[defn-] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defonce[defonce] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defstruct[defstruct]
+Arranging code differently: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/%2E%2E[..] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/doto[doto] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/-%3e[pass:[->]]
+Dynamic scopes (see also <<vars#,Vars and Environment>>): https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/binding[binding] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/locking[locking] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/time[time] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/with-in-str[with-in-str] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/with-local-vars[with-local-vars] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/with-open[with-open] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/with-out-str[with-out-str] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/with-precision[with-precision]
+Creating lazy things (see also <<sequences#,Sequences>>): https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/lazy-cat[lazy-cat] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/lazy-cons[lazy-cons] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/delay[delay]
+<<java_interop#,Java interop>> macros: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/%2E%2E[..] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/amap[amap] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/areduce[areduce] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/gen-class[gen-class] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/gen-interface[gen-interface] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/proxy[proxy] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/proxy-super[proxy-super] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/memfn[memfn]
+Documenting code: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/assert[assert] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/comment[comment] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/doc[doc]
+Transactions: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/dosync[dosync] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/io![io!]
 
 A few <<special_forms#,special forms>> are actually implemented as macros, primarily to provide destructuring: fn let loop
