--- a/content/api/api.adoc
+++ b/content/api/api.adoc
@@ -9,64 +9,64 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 == Clojure API
 
-* http://clojure.github.io/clojure/[Clojure API]
-* http://clojure.github.io/clojure/javadoc/[Clojure Java API] - for calling from Java into Clojure
+* https://clojure.github.io/clojure/[Clojure API]
+* https://clojure.github.io/clojure/javadoc/[Clojure Java API] - for calling from Java into Clojure
 * <<cheatsheet#,Clojure Cheatsheet>>
 
 == ClojureScript API
 
-* http://cljs.info/cheatsheet/[ClojureScript Cheatsheet]
+* https://cljs.info/cheatsheet/[ClojureScript Cheatsheet]
 
 == Clojure Contrib Libraries
 
-* http://clojure.github.io/algo.generic/[algo.generic] Generic versions of common functions
-* http://clojure.github.io/algo.graph/[algo.graph] Graph theory algorithms
-* http://clojure.github.io/algo.monads/[algo.monads] Monad macros and Definitions 
-* http://clojure.github.io/core.async/[core.async] Facilities for asynchronous programming and communication
-* http://clojure.github.io/core.cache/[core.cache] A caching library implementing various cache strategies
-* http://clojure.github.io/core.contracts/[core.contracts] Contracts programming in Clojure
-* http://clojure.github.io/core.incubator/[core.incubator] Functions proposed for core inclusion
-* http://clojure.github.io/core.logic/[core.logic] A logic programming library based on miniKanren
-* http://clojure.github.io/core.match/[core.match] Pattern match and predicate dispatch
-* http://clojure.github.io/core.memoize/[core.memoize] A manipulable, pluggable, memoization framework
-* http://clojure.github.io/core.rrb-vector/[core.rrb-vector] RRB-Tree-based vectors
-* http://clojure.github.io/core.typed/[core.typed] Gradual typing
-* http://clojure.github.io/core.unify/[core.unify] Unification library
-* http://clojure.github.io/data.avl/[data.avl] AVL trees
-* http://clojure.github.io/data.codec/[data.codec] Native codec implementations
-* http://clojure.github.io/data.csv/[data.csv] Reading and writing CSV files
-* http://clojure.github.io/data.finger-tree/[data.finger-tree] Finger trees
-* http://clojure.github.io/data.fressian/[data.fressian] Extensible binary Data Notation
-* http://clojure.github.io/data.generators/[data.generators] Random data generators
-* http://clojure.github.io/data.json/[data.json] JSON encoding / decoding
-* http://clojure.github.io/data.priority-map/[data.priority-map] Priority maps
-* http://clojure.github.io/data.xml/[data.xml] Lazy XML parsing
-* http://clojure.github.io/data.zip/[data.zip] Manipulating zippers
-* http://clojure.github.io/java.classpath/[java.classpath] Classpath utilities
-* http://clojure.github.io/java.data/[java.data] Work with Java Beans
-* http://clojure.github.io/java.jdbc/[java.jdbc] JDBC-based SQL interface 
-* http://clojure.github.io/java.jmx/[java.jmx] JMX interface
-* http://clojure.github.io/math.combinatorics/[math.combinatorics] Lazy sequences for common combinatorial functions
-* http://clojure.github.io/math.numeric-tower/[math.numeric-tower] Math functions and numeric tower
-* http://clojure.github.io/test.generative/[test.generative] Test data generation and execution harness
-* http://clojure.github.io/tools.analyzer/[tools.analyzer] Analyzer framework for Clojure code 
-* http://clojure.github.io/tools.analyzer.js/[tools.analyzer.js] JavaScript-specific passes for tools.analyzer 
-* http://clojure.github.io/tools.analyzer.jvm/[tools.analyzer.jvm] JVM-specific passes for tools.analyzer
-* http://clojure.github.io/tools.cli/[tools.cli] Command-line argument processor
-* http://clojure.github.io/tools.emitter.jvm/[tools.emitter.jvm] JVM bytecode generator
-* http://clojure.github.io/tools.logging/[tools.logging] Logging tools 
-* http://clojure.github.io/tools.macro/[tools.macro] Tools for macro writers
-* http://clojure.github.io/tools.namespace/[tools.namespace] Tools for working with namespace declarations
-* http://clojure.github.io/tools.nrepl/[tools.nrepl] Network REPL
-* http://clojure.github.io/tools.reader/[tools.reader] Clojure reader
-* http://clojure.github.io/tools.trace/[tools.trace] Execution tracing
+* https://clojure.github.io/algo.generic/[algo.generic] Generic versions of common functions
+* https://clojure.github.io/algo.graph/[algo.graph] Graph theory algorithms
+* https://clojure.github.io/algo.monads/[algo.monads] Monad macros and Definitions 
+* https://clojure.github.io/core.async/[core.async] Facilities for asynchronous programming and communication
+* https://clojure.github.io/core.cache/[core.cache] A caching library implementing various cache strategies
+* https://clojure.github.io/core.contracts/[core.contracts] Contracts programming in Clojure
+* https://clojure.github.io/core.incubator/[core.incubator] Functions proposed for core inclusion
+* https://clojure.github.io/core.logic/[core.logic] A logic programming library based on miniKanren
+* https://clojure.github.io/core.match/[core.match] Pattern match and predicate dispatch
+* https://clojure.github.io/core.memoize/[core.memoize] A manipulable, pluggable, memoization framework
+* https://clojure.github.io/core.rrb-vector/[core.rrb-vector] RRB-Tree-based vectors
+* https://clojure.github.io/core.typed/[core.typed] Gradual typing
+* https://clojure.github.io/core.unify/[core.unify] Unification library
+* https://clojure.github.io/data.avl/[data.avl] AVL trees
+* https://clojure.github.io/data.codec/[data.codec] Native codec implementations
+* https://clojure.github.io/data.csv/[data.csv] Reading and writing CSV files
+* https://clojure.github.io/data.finger-tree/[data.finger-tree] Finger trees
+* https://clojure.github.io/data.fressian/[data.fressian] Extensible binary Data Notation
+* https://clojure.github.io/data.generators/[data.generators] Random data generators
+* https://clojure.github.io/data.json/[data.json] JSON encoding / decoding
+* https://clojure.github.io/data.priority-map/[data.priority-map] Priority maps
+* https://clojure.github.io/data.xml/[data.xml] Lazy XML parsing
+* https://clojure.github.io/data.zip/[data.zip] Manipulating zippers
+* https://clojure.github.io/java.classpath/[java.classpath] Classpath utilities
+* https://clojure.github.io/java.data/[java.data] Work with Java Beans
+* https://clojure.github.io/java.jdbc/[java.jdbc] JDBC-based SQL interface 
+* https://clojure.github.io/java.jmx/[java.jmx] JMX interface
+* https://clojure.github.io/math.combinatorics/[math.combinatorics] Lazy sequences for common combinatorial functions
+* https://clojure.github.io/math.numeric-tower/[math.numeric-tower] Math functions and numeric tower
+* https://clojure.github.io/test.generative/[test.generative] Test data generation and execution harness
+* https://clojure.github.io/tools.analyzer/[tools.analyzer] Analyzer framework for Clojure code 
+* https://clojure.github.io/tools.analyzer.js/[tools.analyzer.js] JavaScript-specific passes for tools.analyzer 
+* https://clojure.github.io/tools.analyzer.jvm/[tools.analyzer.jvm] JVM-specific passes for tools.analyzer
+* https://clojure.github.io/tools.cli/[tools.cli] Command-line argument processor
+* https://clojure.github.io/tools.emitter.jvm/[tools.emitter.jvm] JVM bytecode generator
+* https://clojure.github.io/tools.logging/[tools.logging] Logging tools 
+* https://clojure.github.io/tools.macro/[tools.macro] Tools for macro writers
+* https://clojure.github.io/tools.namespace/[tools.namespace] Tools for working with namespace declarations
+* https://clojure.github.io/tools.nrepl/[tools.nrepl] Network REPL
+* https://clojure.github.io/tools.reader/[tools.reader] Clojure reader
+* https://clojure.github.io/tools.trace/[tools.trace] Execution tracing
 
 == Other resources
 
 * http://grimoire.arrdem.com/[Grimoire] - community combined cheatsheet + examples
-* http://clojuredocs.org[ClojureDocs] - community provided example repository
-* http://crossclj.info/[CrossClj] - library cross-reference
+* https://clojuredocs.org[ClojureDocs] - community provided example repository
+* https://crossclj.info/[CrossClj] - library cross-reference
 
 == Deprecated (pre Clojure 1.3)
 
-* http://clojure.github.io/clojure-contrib/[Clojure Contrib API]
+* https://clojure.github.io/clojure-contrib/[Clojure Contrib API]
