--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -9,7 +9,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 == Clojure Discussion
 
-* http://groups.google.com/group/clojure[Clojure Google Group]
+* https://groups.google.com/group/clojure[Clojure Google Group]
 * #clojure IRC channel on https://freenode.net[freenode.net]
 * http://clojurians.net[Clojurians Slack Chat]
 * http://dev.clojure.org/display/community/Clojure+User+Groups[Clojure User Groups]
@@ -22,8 +22,8 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 Official:
 
-* http://clojure.github.io/clojure/[Clojure API Docs]
-* http://clojure.github.io/[Clojure Contrib Library API Docs]
+* https://clojure.github.io/clojure/[Clojure API Docs]
+* https://clojure.github.io/[Clojure Contrib Library API Docs]
 * <<xref/../../reference/documentation#,Clojure Reference Docs>> - official reference information
 * <<xref/../../api/cheatsheet#,Clojure Cheatsheet>> - helpful categorization of most core functions
 * Source - https://github.com/clojure/clojure[Clojure], https://github.com/clojure/clojurescript[ClojureScript], https://github.com/clojure/clojure-clr[ClojureCLR]
@@ -36,8 +36,8 @@ Community:
 * http://aphyr.com/posts/301-clojure-from-the-ground-up-welcome[Clojure from the ground up] - a series of intro articles by Kyle Kingsbury
 * https://github.com/ClojureBridge/curriculum[ClojureBridge Curriculum]
 * http://grimoire.arrdem.com/[Grimoire] - community combined cheatsheet + examples
-* http://clojuredocs.org[ClojureDocs] - community provided example repository
-* http://crossclj.info/[CrossClj] - library cross-reference
+* https://clojuredocs.org[ClojureDocs] - community provided example repository
+* https://crossclj.info/[CrossClj] - library cross-reference
 * http://clojure-doc.org/[Clojure Documentation] - community-driven documentation site
 * http://clojurekoans.com/[Clojure Koans] (http://clojurescriptkoans.com/[online])
 * http://www.4clojure.com/[4clojure] - Clojure practice problems
@@ -78,7 +78,7 @@ Video training (commercial):
 
 Community volunteers maintain http://dev.clojure.org/display/doc/getting+started[Getting Started] documentation for a number of different tools and approaches. Some of the most commonly used tools include:
 
-* http://leiningen.org/[Leiningen] - an extensible build tool that provides dependency management, REPL support, testing, packaging, deployment, and many other capabilities.
+* https://leiningen.org/[Leiningen] - an extensible build tool that provides dependency management, REPL support, testing, packaging, deployment, and many other capabilities.
 * http://boot-clj.com/[Boot] - build tooling for Clojure: instead of a special-purpose DSL, Boot supplies abstractions and libraries you can use to automate nearly any build scenario with the full power of the Clojure language
 * http://www.gnu.org/software/emacs/[Emacs] with https://github.com/clojure-emacs/cider[CIDER]
 * http://www.vim.org/[Vim] with https://github.com/tpope/vim-fireplace[Fireplace]
