--- a/content/guides/comparators.adoc
+++ b/content/guides/comparators.adoc
@@ -18,15 +18,15 @@ See the DOs below for what the return values should be, depending upon the order
 
 In Clojure you need comparators for sorting a collection of values, or for maintaining a collection
 of values in a desired sorted order, e.g a
-http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/sorted-map[sorted-map],
-http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/sorted-set[sorted-set], or
-http://clojure.github.io/data.priority-map/#clojure.data.priority-map/priority-map[priority-map]
+https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/sorted-map[sorted-map],
+https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/sorted-set[sorted-set], or
+https://clojure.github.io/data.priority-map/#clojure.data.priority-map/priority-map[priority-map]
 (also known as a priority queue).
 
-The default comparator http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/compare[compare]
+The default comparator https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/compare[compare]
 works well for sorting numbers in increasing order, or strings, keywords, or symbols,
-in http://en.wikipedia.org/wiki/Lexicographical_order[lexicographic] (i.e dictionary) order,
-and a few other cases. See http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/compare[compare]
+in https://en.wikipedia.org/wiki/Lexicographical_order[lexicographic] (i.e dictionary) order,
+and a few other cases. See https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/compare[compare]
 for examples and more details.
 
 If `compare` does not do what you want, you must provide your own comparator that does. Each of the
@@ -34,7 +34,7 @@ recommendations below is explained in more detail later in this document.
 
 DOs:
 
-* Ensure that your comparators are based on a http://en.wikipedia.org/wiki/Total_order[total order] over
+* Ensure that your comparators are based on a https://en.wikipedia.org/wiki/Total_order[total order] over
 the values you want to compare. It should be able to compare any pair of values that can appear in your
 data set, and determine which value should come first (or that they are equal).
 * Write either a 3-way comparator or a boolean comparator:
@@ -58,15 +58,15 @@ orders.
 at most one of those two values to appear in the sorted collection.
 * Do not use subtraction when writing a 3-way comparator, unless you really know what you are doing.
 
-See also: http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/compare[compare],
-http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/sort[sort],
-http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/sort-by[sort-by],
-http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/sorted-set[sorted-set],
-http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/sorted-set-by[sorted-set-by],
-http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/sorted-map[sorted-map],
-http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/sorted-map-by[sorted-map-by],
-http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/subseq[subseq],
-http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/rsubseq[rsubseq]
+See also: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/compare[compare],
+https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/sort[sort],
+https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/sort-by[sort-by],
+https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/sorted-set[sorted-set],
+https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/sorted-set-by[sorted-set-by],
+https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/sorted-map[sorted-map],
+https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/sorted-map-by[sorted-map-by],
+https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/subseq[subseq],
+https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/rsubseq[rsubseq]
 
 == Introduction
 
@@ -76,14 +76,14 @@ mistakes to avoid when writing your own.
 
 If you do not specify your own comparator, sorting is done by a built-in function `compare`.
 `compare` works for many types of values, ordering them in one particular way: increasing
-numeric order for numbers; http://en.wikipedia.org/wiki/Lexicographical_order[lexicographic order]
+numeric order for numbers; https://en.wikipedia.org/wiki/Lexicographical_order[lexicographic order]
 (aka dictionary order) for strings, symbols, and keywords; shortest-to-longest order by Clojure
 vectors, with lexicographic ordering among equal length vectors. All Java types implement
 the http://docs.oracle.com/javase/6/docs/api/java/lang/Comparable.html[Comparable]
 interface such as characters, booleans, File, URI, and UUID are compared via their
 `compareTo` methods. Finally, `nil` can be compared to all values described earlier, and
 is considered less than everything else.
-See http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/compare[compare]
+See https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/compare[compare]
 for examples and more details.
 
 If this built-in sorting order does not meet your needs, or does not work at all for values
@@ -248,7 +248,7 @@ method `compare` if you want all the details.
 === General rules for comparators
 
 Any comparator, whether 3-way or boolean, should return answers consistent with a
-http://en.wikipedia.org/wiki/Total_order[total order] on the values
+https://en.wikipedia.org/wiki/Total_order[total order] on the values
 you want to compare.
 
 A total order is simply an ordering of all values from smallest to largest, where some groups of
