--- a/content/reference/transducers.adoc
+++ b/content/reference/transducers.adoc
@@ -67,7 +67,7 @@ As a mnemonic, remember that the ordering of transducer functions in *comp* is t
 ----
 
 The following functions produce a transducer when the input collection is omitted:
-http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/map[map] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/cat[cat] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/mapcat[mapcat] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/filter[filter] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/remove[remove] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/take[take] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/take-while[take-while] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/take-nth[take-nth] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/drop[drop] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/drop-while[drop-while] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/replace[replace] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/partition-by[partition-by] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/partition-all[partition-all] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/keep[keep] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/keep-indexed[keep-indexed] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/map-indexed[map-indexed] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/distinct[distinct] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/interpose[interpose] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/dedupe[dedupe] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/random-sample[random-sample]
+https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/map[map] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/cat[cat] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/mapcat[mapcat] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/filter[filter] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/remove[remove] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/take[take] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/take-while[take-while] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/take-nth[take-nth] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/drop[drop] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/drop-while[drop-while] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/replace[replace] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/partition-by[partition-by] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/partition-all[partition-all] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/keep[keep] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/keep-indexed[keep-indexed] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/map-indexed[map-indexed] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/distinct[distinct] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/interpose[interpose] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/dedupe[dedupe] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/random-sample[random-sample]
 
 === Using Transducers
 
@@ -75,7 +75,7 @@ Transducers can be used in many contexts (see below for how to create new ones).
 
 === transduce
 
-One of the most common ways to apply transducers is with the http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/transduce[transduce] function, which is analogous to the standard reduce function:
+One of the most common ways to apply transducers is with the https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/transduce[transduce] function, which is analogous to the standard reduce function:
 
 [source,clojure]
 ----
@@ -100,7 +100,7 @@ image::/images/content/reference/transducers/xf.png[Nested transformations]
 
 === eduction
 
-To capture the process of applying a transducer to a coll, use the http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/eduction[eduction] function. It takes any number of xforms and a final coll and returns a reducible/iterable application of the transducer to the items in coll. These applications will be performed each time reduce/iterator is called.
+To capture the process of applying a transducer to a coll, use the https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/eduction[eduction] function. It takes any number of xforms and a final coll and returns a reducible/iterable application of the transducer to the items in coll. These applications will be performed each time reduce/iterator is called.
 [source,clojure]
 ----
 (def iter (eduction xf (range 5)))
@@ -108,13 +108,13 @@ To capture the process of applying a transducer to a coll, use the http://clojur
 ;; => 6
 ----
 === into
-To apply a transducer to an input collection and construct a new output collection, use http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/into[into] (which efficiently uses reduce and transients if possible):
+To apply a transducer to an input collection and construct a new output collection, use https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/into[into] (which efficiently uses reduce and transients if possible):
 [source,clojure]
 ----
 (into [] xf (range 1000))
 ----
 === sequence
-To create a sequence from the application of a transducer to an input collection, use http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/sequence[sequence]:
+To create a sequence from the application of a transducer to an input collection, use https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/sequence[sequence]:
 [source,clojure]
 ----
 (sequence xf (range 1000))
@@ -139,15 +139,15 @@ The inner function is defined with 3 arities used for different purposes:
 * *Step* (arity 2) - this is a standard reduction function but it is expected to call the *xf* step arity 0 or more times as appropriate in the transducer. For example, filter will choose (based on the predicate) whether to call *xf* or not. map will always call it exactly once. cat may call it many times depending on the inputs.
 * *Completion* (arity 1) - some processes will not end, but for those that do (like *transduce*), the completion arity is used to produce a final value and/or flush state. This arity must call the *xf* completion arity exactly once.
 
-An example use of *completion* is *partition-all*, which must flush any remaining elements at the end of the input. The http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/completing[completing] function can be used to convert a reducing function to a transducing function by adding a default completion arity.
+An example use of *completion* is *partition-all*, which must flush any remaining elements at the end of the input. The https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/completing[completing] function can be used to convert a reducing function to a transducing function by adding a default completion arity.
 
 === Early termination
 
 Clojure has a mechanism for specifying early termination of a reduce:
 
-* http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/reduced[reduced] - takes a value and returns a _reduced_ value indicating reduction should stop
-* http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/reduced?[reduced?] - returns true if the value was created with _reduced_
-* http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/deref[deref] or @ can be used to retrieve the value inside a _reduced_
+* https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/reduced[reduced] - takes a value and returns a _reduced_ value indicating reduction should stop
+* https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/reduced?[reduced?] - returns true if the value was created with _reduced_
+* https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/deref[deref] or @ can be used to retrieve the value inside a _reduced_
 
 A process that uses transducers must check for and stop when the step function returns a reduced value (more on that in Creating Transducible Processes). Additionally, a transducer step function that uses a nested reduce must check for and convey reduced values when they are encountered. (See the implementation of cat for an example.)
 
