--- a/content/reference/vars.adoc
+++ b/content/reference/vars.adoc
@@ -37,7 +37,7 @@ user=> x
 1
 ----
 
-By default Vars are static, but Vars can be marked as dynamic to allow per-thread bindings via the macro http://clojure.github.com/clojure/clojure.core-api.html#clojure.core/binding[binding]. Within each thread they obey a stack discipline:
+By default Vars are static, but Vars can be marked as dynamic to allow per-thread bindings via the macro https://clojure.github.com/clojure/clojure.core-api.html#clojure.core/binding[binding]. Within each thread they obey a stack discipline:
 
 [source,clojure]
 ----
@@ -54,9 +54,9 @@ user=> (+ x y)
 2
 ----
 
-Bindings created with _**binding**_ cannot be seen by any other thread. Likewise, bindings created with _**binding**_ can be assigned to, which provides a means for a nested context to communicate with code before it on the call stack. This capability is opt-in only by setting a metadata tag: _**dynamic**_ to true as in the code block above. There are scenarios that one might wish to redefine static Vars within a context and Clojure (since version 1.3) provides the functions http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/with-redefs[with-redefs] and http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/with-redefs-fn[with-redefs-fn] for such purposes.
+Bindings created with _**binding**_ cannot be seen by any other thread. Likewise, bindings created with _**binding**_ can be assigned to, which provides a means for a nested context to communicate with code before it on the call stack. This capability is opt-in only by setting a metadata tag: _**dynamic**_ to true as in the code block above. There are scenarios that one might wish to redefine static Vars within a context and Clojure (since version 1.3) provides the functions https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/with-redefs[with-redefs] and https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/with-redefs-fn[with-redefs-fn] for such purposes.
 
-Functions defined with http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defn[defn] are stored in Vars, allowing for the re-definition of functions in a running program. This also enables many of the possibilities of aspect- or context-oriented programming. For instance, you could wrap a function with logging behavior only in certain call contexts or threads.
+Functions defined with https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defn[defn] are stored in Vars, allowing for the re-definition of functions in a running program. This also enables many of the possibilities of aspect- or context-oriented programming. For instance, you could wrap a function with logging behavior only in certain call contexts or threads.
 
 [[set]]
 == (*set!* var-symbol expr)
@@ -79,14 +79,14 @@ The <<special_forms#var,var>> special form or the `pass:[#']` reader macro _(see
 [[local-vars]]
 == Non-interned Vars
 
-It is possible to create vars that are not interned by using http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/with-local-vars[with-local-vars]. These vars will not be found during free symbol resolution, and their values have to be accessed manually. But they can serve as useful thread-local mutable cells.
+It is possible to create vars that are not interned by using https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/with-local-vars[with-local-vars]. These vars will not be found during free symbol resolution, and their values have to be accessed manually. But they can serve as useful thread-local mutable cells.
 
 [[related]]
 == Related functions
 
 [%hardbreaks]
-Variants of _**def**_: http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defn[defn] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defn-[defn-] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/definline[definline] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defmacro[defmacro] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defmethod[defmethod] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defmulti[defmulti] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defonce[defonce] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defstruct[defstruct]
-Working with interned Vars: http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/declare[declare] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/intern[intern] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/binding[binding] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/find-var[find-var] <<special_forms#var#,var>>
-Working with Var objects: http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/with-local-vars[with-local-vars] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/var-get[var-get] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/var-set[var-set] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/alter-var-root[alter-var-root] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/var?[var?] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/with-redefs[with-redefs] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/with-redefs-fn[with-redefs-fn]
-Var validators: http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/set-validator[set-validator] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/get-validator[get-validator]
-Common Var metadata: http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/doc[doc] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/find-doc[find-doc] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/test[test]
+Variants of _**def**_: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defn[defn] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defn-[defn-] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/definline[definline] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defmacro[defmacro] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defmethod[defmethod] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defmulti[defmulti] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defonce[defonce] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defstruct[defstruct]
+Working with interned Vars: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/declare[declare] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/intern[intern] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/binding[binding] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/find-var[find-var] <<special_forms#var#,var>>
+Working with Var objects: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/with-local-vars[with-local-vars] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/var-get[var-get] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/var-set[var-set] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/alter-var-root[alter-var-root] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/var?[var?] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/with-redefs[with-redefs] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/with-redefs-fn[with-redefs-fn]
+Var validators: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/set-validator[set-validator] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/get-validator[get-validator]
+Common Var metadata: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/doc[doc] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/find-doc[find-doc] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/test[test]
